static/css/style.css
/* general styling */
.flat {
    border-radius: 0;
}


/* desktop view */
@media only screen and (min-width: 800px){
    .mobile {
        display: none;
    }
    /* home page styling */
/* navigation */
.navigation {
    background: linear-gradient(to bottom,rgba(0,0,0,1) 0%,rgba(0,0,0,0.7) 50%,rgba(0,0,0,0) 100%);
    padding: 1.3rem 0;
    padding-top: 2.2rem;
    /* height: 300px; */
}
.navigation-fixed {
    background: linear-gradient(to bottom,rgba(0, 0, 139,1) 0%,rgba(0, 0, 139,0.9) 86%,rgba(0, 0, 139,0) 100%);
    padding-bottom: 2rem;
    /* background: rgb(0, 0, 139); */
    width: 100%;
    position: fixed;
    z-index:10;
    transition: 1s width ease-in-out ;
}

#nav-menu-icon {
    font-size: 1.5rem;
    margin-top: 14%;
}
#open-account-nav {
    margin-top: 0.6rem;
}
#open-account-nav > a {
    color: white;
}

#logo-nav > img {
    width:50%;
    height: auto;
    margin-left:40%;
}

#about-us-nav {
    margin-top: 1%;
    padding-left: 17%;
}
#about-us-nav > a {
    color: white;
    padding-right: 1.5rem;
}

/* banner */
.home-banner {
    /* background-color: #0056A9; */
    /* background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%); */
    background: url('../img/banner-wallpaper.jpg');
    
    width: 100%;
    color: white;
    /* height: 300px; */
}

.home-login-bg {
    background-color: red;
    height: 400px;
    margin: 2rem 0;
    padding: 1.5rem;
}

.form-transparent{
    margin-bottom: 1.3rem;
}

#login-home-button {
    color: white;
    font-size: 1.2rem;
    font-weight: bold;
    border: 2px solid white;
    margin-top: 1.5rem;
}

/* create account banner */
#create-account-banner > h3{
    margin-top: 5rem;
    font-size: 3rem;
    font-weight: bold;
}
#create-account-banner > p{
    font-size: 1.4rem;
    font-weight: 300;
    margin: 2rem 0;
}

#create-account-banner > a {
    padding: 1.2rem 0;
}
/* promotional offer banner */
#promotional-offer-banner {
    text-align: right;
}
#promotional-offer-banner > h3 {
    margin-top: 8.4rem;
    font-size: 2.9rem;
    text-align: right;
}
#promotional-offer-banner > span {
    font-size: 2.4rem;
    /* text-align: right; */
}
/* choose what's right for you  */
.choose-wrfy-header {
    margin: 3rem 0;
    text-transform: uppercase;
    font-size: 3rem;
}

.choose-wrfy > span {
    font-size: 2.5rem;
    margin-bottom: 2rem;
}

/* editing owl carousel nav buttons */
.owl-prev > span, .owl-next > span {
    font-size: 6rem;
    position: absolute;
    top: -32%;
}
.owl-prev > span{
    left: -5%;
}

.owl-next > span{
    right: -5%;
}
.owl-next > span:hover, .owl-prev > span:hover {
    color: blue;
}

/* commission free trade*/
#commission-free-trade-border {
    border-top: 3px solid grey;
    border-bottom: 3px solid grey;
    margin: 3rem 0;
    padding: 5% 0;
}

#unltd-comm-header {
    font-weight: bold;
    font-size: 2.5rem;
}

#unltd-comm-body {
    font-size: 1.4rem;
    line-height: 2.4rem;
}

/* footer */
#footer-bg{
    background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%);
    color: #fff;
    padding: 4% 0;
}
#footer-logo > img{
    width: 100%;
}
#security-badge > img {
    width: 90%;
    background-color: white;
}

#choose-wrfy-footer > a {
    display: block;
    color: white;
    margin: 0.6rem 0;
}

}

/* mobile view */
@media only screen and (max-width: 800px){
    .desktop {
        display: none;
    }

    /* home page styling */
/* navigation */
.navigation {
    background: linear-gradient(to bottom,rgba(0,0,0,1) 0%,rgba(0,0,0,0.7) 50%,rgba(0,0,0,0) 100%);
    padding: 1.3rem 0;
    padding-top: 2.2rem;
    /* height: 300px; */
}
.navigation-fixed {
    background: linear-gradient(to bottom,rgba(0, 0, 139,1) 0%,rgba(0, 0, 139,0.9) 86%,rgba(0, 0, 139,0) 100%);
    padding-bottom: 2rem;
    /* background: rgb(0, 0, 139); */
    width: 100%;
    position: fixed;
    z-index:10;
    transition: 1s width ease-in-out ;
}

#nav-menu-icon {
    font-size: 1.5rem;
    margin-top: 14%;
}
#open-account-nav {
    margin-top: 0.6rem;
}
#open-account-nav > a {
    color: white;
}

#logo-nav > img {
    width: 100%;
    height: auto;
    margin-left:40%;
}

#about-us-nav {
    margin-top: 1%;
    padding-left: 17%;
}
#about-us-nav > a {
    color: white;
    padding-right: 1.5rem;
}

/* banner */
.home-banner {
    /* background-color: #0056A9; */
    /* background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%); */
    background: url('../img/banner-wallpaper-mobile.jpg') no-repeat;
    height: 100%;
    
    width: 100%;
    color: white;
    /* height: 300px; */
}

.home-login-bg {
    background-color: red;
    height: 400px;
    margin: 2rem 0;
    padding: 1.5rem;
}

.form-transparent{
    margin-bottom: 1.3rem;
}

#login-home-button {
    color: white;
    font-size: 1.2rem;
    font-weight: bold;
    border: 2px solid white;
    margin-top: 1.5rem;
}

/* create account banner */
#create-account-banner > h3{
    margin-top: 5rem;
    font-size: 3rem;
    font-weight: bold;
}
#create-account-banner > p{
    font-size: 1.4rem;
    font-weight: 300;
}

#create-account-banner > a {
    padding: 1.2rem 0;
    margin-bottom: 4rem;
}
/* promotional offer banner */
#promotional-offer-banner {
    text-align: right;
}
#promotional-offer-banner > h3 {
    margin-top: 8.4rem;
    font-size: 2.9rem;
    text-align: right;
}
#promotional-offer-banner > span {
    font-size: 2.4rem;
    /* text-align: right; */
}
/* choose what's right for you  */
.choose-wrfy-header {
    margin: 3rem 0;
    text-transform: uppercase;
    font-size: 3rem;
}

.choose-wrfy > span {
    font-size: 2.5rem;
    margin-bottom: 2rem;
}

/* editing owl carousel nav buttons */
.owl-prev > span, .owl-next > span {
    font-size: 6rem;
    position: absolute;
    top: -32%;
}
.owl-prev > span{
    left: 0%;
}

.owl-next > span{
    right: 0%;
}
.owl-next > span:hover, .owl-prev > span:hover {
    color: blue;
}

/* commission free trade*/
#commission-free-trade-border {
    border-top: 3px solid grey;
    border-bottom: 3px solid grey;
    margin: 3rem 0;
    padding: 5% 0;
}

#start-0-investing >  img {
    width: 100%;
}

#unltd-comm-header {
    font-weight: bold;
    font-size: 2.5rem;
}

#unltd-comm-body {
    font-size: 1.4rem;
    line-height: 2.4rem;
}

/* footer */
#footer-bg{
    background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%);
    color: #fff;
    padding: 4% 0;
}
#footer-logo > img{
    width: 100%;
}
#security-badge > img {
    width: 90%;
    background-color: white;
}

#choose-wrfy-footer > a {
    display: block;
    color: white;
    margin: 0.6rem 0;
}

}

